Fix bug where pressing shift would change keyboard size.

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,3 @@ body {
   left: 0;
   bottom: 0;
 }
-
-.simple-keyboard .hg-button.bigger-keys {
-  flex: 5;
-}
